packages/frontend/tests/snapshots/types__check_failing@unknown_alternative.nemo.snap
---
source: packages/frontend/tests/types.rs
expression: err_buf
input_file: packages/frontend/tests/type_errors/unknown_alternative.nemo
---
[07] Error: Unknown type Unknown
   ╭─[source:2:1]
   │
 6 │   V::Unknown {};
   │      ───┬───  
   │         ╰───── Unknown type Unknown
───╯

[19] Error: Unknown alternative. V does not have an alternative named Unknown
   ╭─[source:2:1]
   │
 9 │     V::Unknown _ => {}
   │        ───┬───  
   │           ╰───── Unknown alternative. V does not have an alternative named Unknown
───╯
