packages/frontend/tests/snapshots/types__check_failing@unknown_function.nemo.snap
---
source: packages/frontend/tests/types.rs
expression: err_buf
input_file: packages/frontend/tests/type_errors/unknown_function.nemo
---
[05] Error: Unknown variable unknown
   ╭─[source:2:1]
   │
 2 │   unknown()
   │   ───┬───  
   │      ╰───── Unknown variable unknown
───╯
