packages/frontend/tests/snapshots/types__check_failing@unknown_intrinsic.nemo.snap
---
source: packages/frontend/tests/types.rs
expression: err_buf
input_file: packages/frontend/tests/type_errors/unknown_intrinsic.nemo
---
[08] Error: Unknown intrinsic @unknown with argcount: 0
   ╭─[source:1:13]
   │
 2 │   @unknown()
   │   ────┬───  
   │       ╰───── Unknown intrinsic @unknown with argcount: 0
───╯
