packages/frontend/tests/snapshots/types__check_failing@unknown_variant.nemo.snap
---
source: packages/frontend/tests/types.rs
expression: err_buf
input_file: packages/frontend/tests/type_errors/unknown_variant.nemo
---
[07] Error: Unknown type Unknown
   ╭─[source:2:1]
   │
 3 │     Unknown::C _ => {}
   │     ───┬───  
   │        ╰───── Unknown type Unknown
───╯
